[gd_scene load_steps=3 format=2]

[ext_resource path="res://Journal/Journal.gd" type="Script" id=1]
[ext_resource path="res://Common/ComputerBackground.tscn" type="PackedScene" id=2]

[node name="Journal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ComputerBackground" parent="." instance=ExtResource( 2 )]

[node name="ReferenceRect2" type="ReferenceRect" parent="."]
margin_left = 220.0
margin_top = 31.0
margin_right = 1000.0
margin_bottom = 95.0
border_color = Color( 0.32549, 0.352941, 0.458824, 1 )
border_width = 4.0
editor_only = false

[node name="ToCoop" type="Button" parent="."]
margin_left = 17.0
margin_top = 51.0
margin_right = 199.0
margin_bottom = 149.0
text = "< Back to Coop"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 262.0
margin_top = 193.0
margin_right = 262.0
margin_bottom = 160.0
text = "Chickens need to eat every day. They are happy to eat cheap nutritious pellets but will thirve with more variety. Chickens will eat the best food possible as soon as they need it - you just have to have it around. Talk to your local chicken feed supplier about what they have. They will typically sell you bundles with a day's worth of food, so larger farms are more expensive."

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 262.0
margin_top = 222.0
margin_right = 1264.0
margin_bottom = 825.0
text = "There are two kinds of races, the kind that happen every day and are for anyone, and league races which are special events

EVERY DAY RACES
In order to be part of the racing circut, you must compete  in one the races held every day. Every farm in the circuit competes but because there are multiple races held on the same day your racer will only face 3 other farms per race. This is a great way to show off your flock and maybe earn some money.

LEAGUE RACES
These are special event you can enter. They are multiple days long and to win you must  win every race. "

[node name="Squares" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Square" type="ColorRect" parent="Squares"]
margin_left = 262.0
margin_top = 51.0
margin_right = 287.0
margin_bottom = 76.0
color = Color( 0.447059, 0.458824, 0.32549, 1 )

[node name="Square2" type="ColorRect" parent="Squares"]
margin_left = 294.0
margin_top = 51.0
margin_right = 319.0
margin_bottom = 76.0
color = Color( 0.447059, 0.458824, 0.32549, 1 )

[node name="Square3" type="ColorRect" parent="Squares"]
margin_left = 327.0
margin_top = 51.0
margin_right = 352.0
margin_bottom = 76.0
color = Color( 0.447059, 0.458824, 0.32549, 1 )

[node name="Square4" type="ColorRect" parent="Squares"]
margin_left = 360.0
margin_top = 51.0
margin_right = 385.0
margin_bottom = 76.0
color = Color( 0.447059, 0.458824, 0.32549, 1 )

[node name="Square5" type="ColorRect" parent="Squares"]
margin_left = 454.0
margin_top = 51.0
margin_right = 479.0
margin_bottom = 76.0
color = Color( 0.458824, 0.32549, 0.439216, 1 )

[node name="Square6" type="ColorRect" parent="Squares"]
margin_left = 486.0
margin_top = 51.0
margin_right = 511.0
margin_bottom = 76.0
color = Color( 0.458824, 0.32549, 0.439216, 1 )

[node name="Square7" type="ColorRect" parent="Squares"]
margin_left = 519.0
margin_top = 51.0
margin_right = 544.0
margin_bottom = 76.0
color = Color( 0.458824, 0.32549, 0.439216, 1 )

[node name="Square8" type="ColorRect" parent="Squares"]
margin_left = 552.0
margin_top = 51.0
margin_right = 577.0
margin_bottom = 76.0
color = Color( 0.458824, 0.32549, 0.439216, 1 )

[node name="Square9" type="ColorRect" parent="Squares"]
margin_left = 652.0
margin_top = 51.0
margin_right = 677.0
margin_bottom = 76.0
color = Color( 0.32549, 0.439216, 0.458824, 1 )

[node name="Square10" type="ColorRect" parent="Squares"]
margin_left = 684.0
margin_top = 51.0
margin_right = 709.0
margin_bottom = 76.0
color = Color( 0.32549, 0.439216, 0.458824, 1 )

[node name="Square11" type="ColorRect" parent="Squares"]
margin_left = 717.0
margin_top = 51.0
margin_right = 742.0
margin_bottom = 76.0
color = Color( 0.32549, 0.439216, 0.458824, 1 )

[node name="Square12" type="ColorRect" parent="Squares"]
margin_left = 750.0
margin_top = 51.0
margin_right = 775.0
margin_bottom = 76.0
color = Color( 0.32549, 0.439216, 0.458824, 1 )

[node name="Square13" type="ColorRect" parent="Squares"]
margin_left = 831.0
margin_top = 51.0
margin_right = 856.0
margin_bottom = 76.0
color = Color( 0.223529, 0.25098, 0.356863, 1 )

[node name="Square14" type="ColorRect" parent="Squares"]
margin_left = 863.0
margin_top = 51.0
margin_right = 888.0
margin_bottom = 76.0
color = Color( 0.223529, 0.25098, 0.356863, 1 )

[node name="Square15" type="ColorRect" parent="Squares"]
margin_left = 896.0
margin_top = 51.0
margin_right = 921.0
margin_bottom = 76.0
color = Color( 0.223529, 0.25098, 0.356863, 1 )

[node name="Square16" type="ColorRect" parent="Squares"]
margin_left = 929.0
margin_top = 51.0
margin_right = 954.0
margin_bottom = 76.0
color = Color( 0.223529, 0.25098, 0.356863, 1 )

[node name="Content" type="RichTextLabel" parent="."]
margin_left = 262.0
margin_top = 222.0
margin_right = 1648.0
margin_bottom = 994.0
bbcode_enabled = true
bbcode_text = "[b]BOLD[/b]
There are two kinds of races, the kind that happen every day and are for anyone, and league races which are special events\\n\\n[b]EVERY DAY RACES[/b]\\nIn order to be part of the racing circut, you must compete  in one the races held every day. Every farm in the circuit competes but because there are multiple races held on the same day your racer will only face 3 other farms per race. This is a great way to show off your flock and maybe earn some money.\\n\\n[b]LEAGUE RACES[/b]\\nThese are special event you can enter. They are multiple days long and to win you must win every race."
text = "BOLD
There are two kinds of races, the kind that happen every day and are for anyone, and league races which are special events\\n\\nEVERY DAY RACES\\nIn order to be part of the racing circut, you must compete  in one the races held every day. Every farm in the circuit competes but because there are multiple races held on the same day your racer will only face 3 other farms per race. This is a great way to show off your flock and maybe earn some money.\\n\\nLEAGUE RACES\\nThese are special event you can enter. They are multiple days long and to win you must win every race."

[node name="Links" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Diary" type="LinkButton" parent="Links"]
margin_left = 262.0
margin_top = 130.0
margin_right = 369.0
margin_bottom = 162.0
grow_vertical = 2
rect_min_size = Vector2( 0, 48 )
focus_mode = 2
theme_type_variation = "LinkButton2"
toggle_mode = true
text = "My Diary"

[node name="Breeds" type="LinkButton" parent="Links"]
margin_left = 400.0
margin_top = 130.0
margin_right = 634.0
margin_bottom = 162.0
grow_vertical = 2
rect_min_size = Vector2( 0, 48 )
focus_mode = 2
theme_type_variation = "LinkButton2"
toggle_mode = true
text = "Breeds Discovered"

[connection signal="pressed" from="ToCoop" to="." method="_on_ToCoop_pressed"]
[connection signal="toggled" from="Links/Diary" to="." method="_on_Diary_toggled"]
[connection signal="toggled" from="Links/Breeds" to="." method="_on_Breeds_toggled"]
